# arcade_in_console

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  bullets.cpp  bullets.h  enemies.cpp  enemies.h  game.h  game_utils.cpp  game_utils.h  main.cpp  players.cpp  players.h  test.cpp
docs/html/: _c_make_c_x_x_compiler_id_8cpp.html  alternative__macros_8cpp.html  annotated.html  annotated_dup.js  assert__returns__disabled_8cpp.html  assert__returns__disabled_8cpp.js  assert__returns__disabled_8cpp_source.html  assert__returns__disabled__evaluate_8cpp.html  assert__returns__disabled__evaluate_8cpp.js  assertion__macros_8cpp.html  assertion__macros_8cpp.js  asserts__used__outside__of__tests_8cpp.html  bitfield__packed__struct_8cpp.html  bitfield__packed__struct_8cpp.js  bitfields_8cpp.html  bitfields_8cpp.js  build_2__deps_2doctest-src_2examples_2all__features_2main_8cpp.html  build_2__deps_2doctest-src_2examples_2all__features_2main_8cpp.js  build_2__deps_2doctest-src_2examples_2combining__the__same__tests__built__differently__in__multiple__shared__objects_2main_8cpp.html  build_2__deps_2doctest-src_2examples_2combining__the__same__tests__built__differently__in__multiple__shared__objects_2main_8cpp.js  build_2__deps_2doctest-src_2examples_2exe__with__static__libs_2main_8cpp.html  build_2__deps_2doctest-src_2examples_2exe__with__static__libs_2main_8cpp.js  build_2__deps_2doctest-src_2examples_2executable__dll__and__plugin_2main_8cpp.html  (+599 more)
src/: enemies.cpp  enemies.h  game.cpp  game.h  game_utils.cpp  game_utils.h  main.cpp  players.cpp  players.h  test.cpp
(+122 files in other folders)
